Add Plugin List, add Tag support on Update (#20)